--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,13 @@
     ],
     "require": {
         "fzaninotto/faker": "^1.8",
-        "symfony/var-dumper": "^4.3"
+        "symfony/var-dumper": "^4.3",
+        "symfony/dotenv": "^4.3",
+        "zendframework/zend-servicemanager": "^3.4"
+    },
+    "autoload": {
+        "psr-4": {
+            "Application\\": "src/Application"
+        }
     }
 }
