Fill empty files & add sql structure

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-LORD_DB_HOST = database
-LORD_DB_NAME = app
-LORD_DB_PASS = root
-LORD_DB_PORT = 3382
-LORD_DB_USER = root
+LORD_DB_HOST=database_88
+LORD_DB_NAME=app
+LORD_DB_PASS=root
+LORD_DB_PORT=3382
+LORD_DB_USER=root
