--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "fzaninotto/faker": "^1.8",
         "symfony/var-dumper": "^4.3",
         "symfony/dotenv": "^4.3",
-        "zendframework/zend-servicemanager": "^3.4"
+        "zendframework/zend-servicemanager": "^3.4",
+        "ext-pdo": "*"
     },
     "autoload": {
         "psr-4": {
