--- a/docker/webservice/000-default.conf
+++ b/docker/webservice/000-default.conf
@@ -1,8 +1,8 @@
 <VirtualHost *:80>
 
 	ServerAdmin webmaster@localhost
-	DocumentRoot /var/www/html/src
-  <Directory /var/www/html/src>
+	DocumentRoot /var/www/html
+  <Directory /var/www/html>
     AllowOverride None
     Require all granted
     Allow from All
