--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
         "symfony/var-dumper": "^4.3",
         "symfony/dotenv": "^4.3",
         "zendframework/zend-servicemanager": "^3.4",
-        "ext-pdo": "*"
+        "ext-pdo": "*",
+        "ext-curl": "*",
+        "ext-json": "*"
     },
     "autoload": {
         "psr-4": {
